--- a/Shooter/Shooter/Shooter.vcxproj.filters
+++ b/Shooter/Shooter/Shooter.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClCompile Include="Tile.cpp">
       <Filter>Source Files\Stage</Filter>
     </ClCompile>
+    <ClCompile Include="Astar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tools.hpp">
@@ -127,6 +130,9 @@
     </ClInclude>
     <ClInclude Include="Tile.hpp">
       <Filter>Header Files\Stage</Filter>
+    </ClInclude>
+    <ClInclude Include="Astar.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
