--- a/Shooter/Shooter/Shooter.vcxproj.filters
+++ b/Shooter/Shooter/Shooter.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="Astar.cpp">
       <Filter>Source Files\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="Shield.cpp">
+      <Filter>Source Files\Enemy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tools.hpp">
@@ -132,6 +135,9 @@
       <Filter>Header Files\Stage</Filter>
     </ClInclude>
     <ClInclude Include="Astar.hpp">
+      <Filter>Header Files\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Shield.hpp">
       <Filter>Header Files\Enemy</Filter>
     </ClInclude>
   </ItemGroup>
