--- a/Shooter/Shooter/Shooter.vcxproj.filters
+++ b/Shooter/Shooter/Shooter.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClCompile Include="Shield.cpp">
       <Filter>Source Files\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="Stage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tools.hpp">
@@ -139,6 +142,9 @@
     </ClInclude>
     <ClInclude Include="Shield.hpp">
       <Filter>Header Files\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="Stage.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
