--- a/Shooter/Shooter/Shooter.vcxproj.filters
+++ b/Shooter/Shooter/Shooter.vcxproj.filters
@@ -97,7 +97,7 @@
       <Filter>Source Files\Enemy</Filter>
     </ClCompile>
     <ClCompile Include="Stage.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Stage</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -144,7 +144,7 @@
       <Filter>Header Files\Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Stage.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Stage</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
