--- a/Shooter/Shooter/Shooter.vcxproj
+++ b/Shooter/Shooter/Shooter.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Colors.cpp" />
     <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Equipement.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Colors.hpp" />
     <ClInclude Include="Enemy.hpp" />
+    <ClInclude Include="Equipement.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="Resource.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
