--- a/Shooter/Shooter/Shooter.vcxproj
+++ b/Shooter/Shooter/Shooter.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Tools.cpp" />
     <ClCompile Include="Window.cpp" />
+    <ClCompile Include="Xp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Astar.hpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="Tile.hpp" />
     <ClInclude Include="Tools.hpp" />
     <ClInclude Include="Window.hpp" />
+    <ClInclude Include="Xp.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
