--- a/Shooter/Shooter/Shooter.vcxproj
+++ b/Shooter/Shooter/Shooter.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Equipement.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PopUp.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shield.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Enemy.hpp" />
     <ClInclude Include="Equipement.hpp" />
     <ClInclude Include="Player.hpp" />
+    <ClInclude Include="PopUp.hpp" />
     <ClInclude Include="Resource.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
     <ClInclude Include="Shield.hpp" />
