--- a/Shooter/Shooter/Shooter.vcxproj.filters
+++ b/Shooter/Shooter/Shooter.vcxproj.filters
@@ -61,6 +61,12 @@
     <Filter Include="Source Files\Bonus &amp; Boost">
       <UniqueIdentifier>{23555b60-e102-41ab-a7ed-215c00ff7ce4}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\UI">
+      <UniqueIdentifier>{03dc345a-41e1-4fc8-9f13-3d1dc3ffa289}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\UI">
+      <UniqueIdentifier>{2619cded-1af1-4e20-86c4-d3b8fcd00fac}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -123,9 +129,6 @@
     <ClCompile Include="Shop.cpp">
       <Filter>Source Files\Upgrades</Filter>
     </ClCompile>
-    <ClCompile Include="Button.cpp">
-      <Filter>Source Files\Tools</Filter>
-    </ClCompile>
     <ClCompile Include="ShopButton.cpp">
       <Filter>Source Files\Upgrades</Filter>
     </ClCompile>
@@ -138,8 +141,11 @@
     <ClCompile Include="Crate.cpp">
       <Filter>Source Files\Bonus &amp; Boost</Filter>
     </ClCompile>
+    <ClCompile Include="Button.cpp">
+      <Filter>Source Files\UI</Filter>
+    </ClCompile>
     <ClCompile Include="PopUp.cpp">
-      <Filter>Source Files\Tools</Filter>
+      <Filter>Source Files\UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -200,9 +206,6 @@
     <ClInclude Include="Camera.hpp">
       <Filter>Header Files\Player</Filter>
     </ClInclude>
-    <ClInclude Include="Button.hpp">
-      <Filter>Header Files\Tools</Filter>
-    </ClInclude>
     <ClInclude Include="ShopButton.hpp">
       <Filter>Header Files\Upgrades</Filter>
     </ClInclude>
@@ -215,8 +218,11 @@
     <ClInclude Include="Crate.hpp">
       <Filter>Header Files\Bonus &amp; Boost</Filter>
     </ClInclude>
+    <ClInclude Include="Button.hpp">
+      <Filter>Header Files\UI</Filter>
+    </ClInclude>
     <ClInclude Include="PopUp.hpp">
-      <Filter>Header Files\Tools</Filter>
+      <Filter>Header Files\UI</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
