--- a/Shooter/Shooter/Shooter.vcxproj
+++ b/Shooter/Shooter/Shooter.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="Astar.cpp" />
     <ClCompile Include="Attachment.cpp" />
+    <ClCompile Include="BonusPopUp.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Colors.cpp" />
@@ -173,6 +174,7 @@
   <ItemGroup>
     <ClInclude Include="Astar.hpp" />
     <ClInclude Include="Attachment.hpp" />
+    <ClInclude Include="BonusPopUp.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="Colors.hpp" />
