--- a/Shooter/Shooter/Shooter.vcxproj
+++ b/Shooter/Shooter/Shooter.vcxproj
@@ -151,13 +151,14 @@
     <ClCompile Include="Colors.cpp" />
     <ClCompile Include="Crate.cpp" />
     <ClCompile Include="Enemy.cpp" />
-    <ClCompile Include="Equipement.cpp" />
+    <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="LoadMenu.cpp" />
     <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PopUp.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="Save.cpp" />
     <ClCompile Include="Shield.cpp" />
     <ClCompile Include="Shop.cpp" />
     <ClCompile Include="ShopButton.cpp" />
@@ -182,13 +183,14 @@
     <ClInclude Include="Colors.hpp" />
     <ClInclude Include="Crate.hpp" />
     <ClInclude Include="Enemy.hpp" />
-    <ClInclude Include="Equipement.hpp" />
+    <ClInclude Include="Equipment.hpp" />
     <ClInclude Include="LoadMenu.hpp" />
     <ClInclude Include="PauseMenu.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="PopUp.hpp" />
     <ClInclude Include="Resource.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
+    <ClInclude Include="Save.hpp" />
     <ClInclude Include="Shield.hpp" />
     <ClInclude Include="Shop.hpp" />
     <ClInclude Include="ShopButton.hpp" />
