prepping terrain with better IA

--- a/Shooter/Shooter/Shooter.vcxproj.filters
+++ b/Shooter/Shooter/Shooter.vcxproj.filters
@@ -251,5 +251,8 @@
     <ClInclude Include="PauseMenu.hpp">
       <Filter>Header Files\UI</Filter>
     </ClInclude>
+    <ClInclude Include="Save.hpp">
+      <Filter>Header Files\Save &amp; Load</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
