--- a/Shooter/Shooter/Shooter.vcxproj
+++ b/Shooter/Shooter/Shooter.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="BonusPopUp.cpp" />
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Checkbox.cpp" />
     <ClCompile Include="Colors.cpp" />
     <ClCompile Include="Crate.cpp" />
     <ClCompile Include="Enemy.cpp" />
@@ -181,6 +182,7 @@
     <ClInclude Include="BonusPopUp.hpp" />
     <ClInclude Include="Button.hpp" />
     <ClInclude Include="Camera.hpp" />
+    <ClInclude Include="Checkbox.hpp" />
     <ClInclude Include="Colors.hpp" />
     <ClInclude Include="Crate.hpp" />
     <ClInclude Include="Enemy.hpp" />
