Some Textures & Volume fixed

--- a/Shooter/Shooter/Shooter.vcxproj.filters
+++ b/Shooter/Shooter/Shooter.vcxproj.filters
@@ -70,7 +70,7 @@
     <Filter Include="Header Files\Save &amp; Load">
       <UniqueIdentifier>{c6f7db7d-a620-4eac-9d70-86ce2b938e0a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\UI\Stage">
+    <Filter Include="Header Files\Stage">
       <UniqueIdentifier>{8ec46b4b-32d8-4022-8aed-32c75eafa7df}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -213,7 +213,7 @@
       <Filter>Header Files\Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Tile.hpp">
-      <Filter>Header Files\UI\Stage</Filter>
+      <Filter>Header Files\Stage</Filter>
     </ClInclude>
     <ClInclude Include="Astar.hpp">
       <Filter>Header Files\Enemy</Filter>
@@ -222,7 +222,7 @@
       <Filter>Header Files\Enemy</Filter>
     </ClInclude>
     <ClInclude Include="Stage.hpp">
-      <Filter>Header Files\UI\Stage</Filter>
+      <Filter>Header Files\Stage</Filter>
     </ClInclude>
     <ClInclude Include="Colors.hpp">
       <Filter>Header Files\Tools</Filter>
